# Wave

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  test1.py  test_login.py
Course_5/: Lesson3_HW.py  Lesson4_HW.py  Lesson5.py  Lesson5_HW.py  Lesson7.py  animal.py  cat.py  dog.py  lesson1.py  lesson2.py  lesson3_thierry.py  my_calc.py  review_ 28_09.py
HW/: lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  my_calc.py
HWChyruk/: hw4_part2.py  hw_4.py
Lessons/: SofiaPiep_HW1.py  SofiaPiep_HW2.py  SofiaPiep_HW3.py  test_simple1.py
pages/: base_page.py  locators.py  main_page.py
