[tool.poetry]
name = "waveqa5"
version = "0.1.0"
description = ""
authors = ["Sofia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
selenium = "^4.4.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
