[tool.poetry]
name = "von-vorne"
version = "0.1.0"
description = ""
authors = ["Olga Gerber <gerberolya@gmail.com>"]
readme = "README.md"
packages = [{include = "von_vorne"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
webdriver-manager = "^3.8.5"
selenium = "^4.6.0"
black = "^22.10.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
